--- a/dot_config/nvim/lua/plugins/ai.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/ai.lua.tmpl
@@ -1,4 +1,3 @@
-{{ if ne .location "client" -}}
 local kind_icons = {
     -- LLM Provider icons
     claude = '󰋦',
@@ -30,130 +29,117 @@ local source_icons = {
     -- FALLBACK
     fallback = '󰜚',
 }
-{{ end -}}
 return {
-{{ if eq .location "client" -}}
-{
-    "CopilotC-Nvim/CopilotChat.nvim",
-    opts = function()
-      local user = vim.env.USER or "User"
-      user = user:sub(1, 1):upper() .. user:sub(2)
-      return {
-        auto_insert_mode = true,
-        question_header = "  " .. user .. " ",
-        answer_header = "  Copilot ",
-        window = {
-          width = 0.4,
+  {
+    "yetone/avante.nvim",
+    -- if you want to build from source then do `make BUILD_FROM_SOURCE=true`
+    -- ⚠️ must add this setting! ! !
+    build = "make",
+    event = "VeryLazy",
+    version = false, -- Never set this value to "*"! Never!
+    opts = {
+      input = {
+        provider = "snacks",
+        provider_opts = {
+          -- Additional snacks.input options
+          title = "Avante Input",
+          icon = " ",
         },
-      }
-    end,
-    keys = {
-    { "<c-s>", "<CR>", ft = "copilot-chat", desc = "Submit Prompt", remap = true },
-    { "<leader>a", "", desc = "+ai", mode = { "n", "v" } },
-    {
-      "<leader>aa",
-      function()
-        return require("CopilotChat").toggle()
-      end,
-      desc = "Toggle (CopilotChat)",
-      mode = { "n", "v" },
-    },
-    {
-      "<leader>ax",
-      function()
-        return require("CopilotChat").reset()
-      end,
-      desc = "Clear (CopilotChat)",
-      mode = { "n", "v" },
-    },
-    {
-      "<leader>aq",
-      function()
-        vim.ui.input({
-          prompt = "Quick Chat: ",
-        }, function(input)
-          if input ~= "" then
-            require("CopilotChat").ask(input)
-          end
-        end)
-      end,
-      desc = "Quick Chat (CopilotChat)",
-      mode = { "n", "v" },
-    },
-    {
-      "<leader>ap",
-      function()
-        require("CopilotChat").select_prompt()
-      end,
-      desc = "Prompt Actions (CopilotChat)",
-      mode = { "n", "v" },
-    },
-  },
-},
-{
-  "zbirenbaum/copilot.lua",
-  cmd = "Copilot",
-  build = ":Copilot auth",
-  event = "BufReadPost",
-  opts = {
-    suggestion = {
-      -- enabled = not vim.g.ai_cmp,
-      enabled = false,
-      auto_trigger = true,
-      -- hide_during_completion = vim.g.ai_cmp,
-      hide_during_completion = true,
-      keymap = {
-        accept = false, -- handled by nvim-cmp / blink.cmp
-        next = "<M-]>",
-        prev = "<M-[>",
       },
-    },
-    panel = { enabled = false },
-    filetypes = {
-      markdown = true,
-      javascript = true,
-      typescript = true,
-      typescriptreact = true,
-      javascriptreact = true,
-      help = true,
-    },
-  },
-},
-{
-  "zbirenbaum/copilot.lua",
-  opts = function()
-    LazyVim.cmp.actions.ai_accept = function()
-      if require("copilot.suggestion").is_visible() then
-        LazyVim.create_undo()
-        require("copilot.suggestion").accept()
-        return true
-      end
-    end
-  end,
-},
-{
-  "giuxtaposition/blink-cmp-copilot",
-},
-{
-  "saghen/blink.cmp",
-  optional = true,
-  dependencies = { "giuxtaposition/blink-cmp-copilot" },
-  opts = {
-    sources = {
-      default = { "copilot" },
+{{- if eq .location "client" -}}
+      provider = "copilot",
+{{- else -}}
+      provider = "ollama",
+      -- provider = "gemini",
+{{- end -}}
       providers = {
-        copilot = {
-          name = "copilot",
-          module = "blink-cmp-copilot",
-          kind = "Copilot",
-          score_offset = 100,
-          async = true,
+          ollama = {
+            endpoint = "http://localhost:11434",
+            model = "qwen2.5-coder",
+          },
+      },
+      {
+        -- system_prompt as function ensures LLM always has latest MCP server state
+        -- This is evaluated for every message, even in existing chats
+        system_prompt = function()
+            local hub = require("mcphub").get_hub_instance()
+            return hub and hub:get_active_servers_prompt() or ""
+        end,
+        -- Using function prevents requiring mcphub before it's loaded
+        custom_tools = function()
+            return {
+                require("mcphub.extensions.avante").mcp_tool(),
+            }
+        end,
+      }
+    },
+    dependencies = {
+      "nvim-lua/plenary.nvim",
+      "MunifTanjim/nui.nvim",
+      --- The below dependencies are optional,
+      "echasnovski/mini.pick", -- for file_selector provider mini.pick
+      "nvim-telescope/telescope.nvim", -- for file_selector provider telescope
+      "hrsh7th/nvim-cmp", -- autocompletion for avante commands and mentions
+      "ibhagwan/fzf-lua", -- for file_selector provider fzf
+      "stevearc/dressing.nvim", -- for input provider dressing
+      "folke/snacks.nvim", -- for input provider snacks
+      "echasnovski/mini.icons", -- or nvim-tree/nvim-web-devicons
+      {
+        -- Make sure to set this up properly if you have lazy=true
+        'MeanderingProgrammer/render-markdown.nvim',
+        opts = {
+          file_types = { "markdown", "Avante" },
         },
+        ft = { "markdown", "Avante" },
       },
     },
   },
-},
-{{ else -}}
+{{- if eq .location "client" -}}
+  {
+    "zbirenbaum/copilot.lua",
+    cmd = "Copilot",
+    build = ":Copilot auth",
+    event = "BufReadPost",
+    opts = {
+      suggestion = {
+        -- enabled = not vim.g.ai_cmp,
+        enabled = false,
+        auto_trigger = true,
+        -- hide_during_completion = vim.g.ai_cmp,
+        hide_during_completion = true,
+        keymap = {
+          accept = false, -- handled by nvim-cmp / blink.cmp
+          next = "<M-]>",
+          prev = "<M-[>",
+        },
+      },
+      panel = { enabled = false },
+      filetypes = {
+        markdown = true,
+        javascript = true,
+        typescript = true,
+        typescriptreact = true,
+        javascriptreact = true,
+        help = true,
+      },
+    },
+  },
+  {
+    "zbirenbaum/copilot.lua",
+    opts = function()
+      LazyVim.cmp.actions.ai_accept = function()
+        if require("copilot.suggestion").is_visible() then
+          LazyVim.create_undo()
+          require("copilot.suggestion").accept()
+          return true
+        end
+      end
+    end,
+  },
+  {
+    "giuxtaposition/blink-cmp-copilot",
+  },
+{{- else -}}
   {
     "milanglacier/minuet-ai.nvim",
     config = function()
@@ -234,11 +220,16 @@ return {
       })
     end,
   },
+{{- end -}}
   {
     "saghen/blink.cmp",
     optional = true,
     dependencies = { 
+{{- if eq .location "client" -}}
+      "giuxtaposition/blink-cmp-copilot",
+{{- else -}}
       "milanglacier/minuet-ai.nvim",
+{{- end -}}
       "Kaiser-Yang/blink-cmp-avante",
     },
     opts = {
@@ -269,8 +260,19 @@ return {
         },
       },
       sources = {
-        default = { "avante", "minuet" },
+{{- if eq .location "client" -}}
+        default = { "avante", "copilot" },
+{{- else -}}
+          default = { "avante", "minuet" },
+{{- end }}
         providers = {
+          copilot = {
+            name = "copilot",
+            module = "blink-cmp-copilot",
+            kind = "Copilot",
+            score_offset = 100,
+            async = true,
+          },
           minuet = { 
             name = "minuet",
             module = "minuet.blink",
@@ -280,7 +282,7 @@ return {
               module = 'blink-cmp-avante',
               name = 'Avante',
               opts = { }
-          }
+          },
         },
       },
     },
@@ -301,67 +303,4 @@ return {
       })
     end
   },
-  {
-    "yetone/avante.nvim",
-    -- if you want to build from source then do `make BUILD_FROM_SOURCE=true`
-    -- ⚠️ must add this setting! ! !
-    build = "make",
-    event = "VeryLazy",
-    version = false, -- Never set this value to "*"! Never!
-    opts = {
-      -- add any opts here
-      -- for example
-      input = {
-        provider = "snacks",
-        provider_opts = {
-          -- Additional snacks.input options
-          title = "Avante Input",
-          icon = " ",
-        },
-      },
-      provider = "ollama",
-      -- provider = "gemini",
-      providers = {
-          ollama = {
-            endpoint = "http://localhost:11434",
-            model = "qwen2.5-coder",
-          },
-      },
-      {
-        -- system_prompt as function ensures LLM always has latest MCP server state
-        -- This is evaluated for every message, even in existing chats
-        system_prompt = function()
-            local hub = require("mcphub").get_hub_instance()
-            return hub and hub:get_active_servers_prompt() or ""
-        end,
-        -- Using function prevents requiring mcphub before it's loaded
-        custom_tools = function()
-            return {
-                require("mcphub.extensions.avante").mcp_tool(),
-            }
-        end,
-      }
-    },
-    dependencies = {
-      "nvim-lua/plenary.nvim",
-      "MunifTanjim/nui.nvim",
-      --- The below dependencies are optional,
-      "echasnovski/mini.pick", -- for file_selector provider mini.pick
-      "nvim-telescope/telescope.nvim", -- for file_selector provider telescope
-      "hrsh7th/nvim-cmp", -- autocompletion for avante commands and mentions
-      "ibhagwan/fzf-lua", -- for file_selector provider fzf
-      "stevearc/dressing.nvim", -- for input provider dressing
-      "folke/snacks.nvim", -- for input provider snacks
-      "echasnovski/mini.icons", -- or nvim-tree/nvim-web-devicons
-      {
-        -- Make sure to set this up properly if you have lazy=true
-        'MeanderingProgrammer/render-markdown.nvim',
-        opts = {
-          file_types = { "markdown", "Avante" },
-        },
-        ft = { "markdown", "Avante" },
-      },
-    },
-  }
-{{ end }}
 }
